--- a/public/home.css
+++ b/public/home.css
@@ -79,7 +79,7 @@
 
 .new-file-button {
     color: #60aaff;
-    font-size: var(--xxxl);
+    font-size: var(--xxl);
     padding-block: 5px;
     cursor: pointer;
     width: 85%;
@@ -264,6 +264,26 @@
     opacity: 0;
 }
 
+.image-preview {
+    max-height: 245px;
+    width: 100%;
+    object-fit: scale-down;
+}
+
+.image-preview-container {
+    border: 1px solid var(--main-blue);
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 250px;
+}
+
 .hide {
     display: none;
+}
+
+.video-preview {
+    width: 80%;
+    max-height: 250px;
+    object-fit: scale-down;
 }
