--- a/views/error.ejs
+++ b/views/error.ejs
@@ -11,6 +11,9 @@
     <h1>Something went Wrong !</h1>
     <h1>please try again later</h1>
     <a href="/">go to the main page</a>
+    <p>
+        <%= error %>
+    </p>
 </body>
 
 </html>
