--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,8 +21,11 @@
         <header class="header-wrapper">
 
             <div class="logo-wrapper">
-                <img class="logo" src="/images/logo.png" alt="">
-                <h1 class="logo-name">Safe Cloud</h1>
+                <div class="logo-icon">
+                    <i class="fa-solid fa-cloud"></i>
+                    <i class="fa-solid fa-shield-halved"></i>
+                </div>
+                <h1 class="logo-name">Safe<span>Cloud</span></h1>
             </div>
 
             <input class="search-bar" placeholder="Search your files..." type="text">
